--- a/paginas/parciais/_header.html
+++ b/paginas/parciais/_header.html
@@ -8,7 +8,7 @@
         <nav class="esquerda">
             <ul class="outromenu">
                 <li class="outromenub"><a href="{% url  'cadastro_beneficiario'%}">Cadastro</a></li>
-                <li class="outromenub"><a href="#">Planilha</a></li>
+                <li class="outromenub"><a href="#">Listas</a></li>
                 <li><a href="#">Documentos</a></li>
             </ul>
         </nav>
