--- a/paginas/parciais/_header.html
+++ b/paginas/parciais/_header.html
@@ -9,7 +9,7 @@
             <ul class="outromenu">
                 <li class="outromenub"><a href="{% url  'cadastro_beneficiario'%}">Cadastro</a></li>
                 <li class="outromenub"><a href="#">Listas</a></li>
-                <li><a href="#">Documentos</a></li>
+                <li><a href="{% url 'index'%}">Documentos</a></li>
             </ul>
         </nav>
 
